# fastapi-ai

./: README.md  chain.py  chains1.py  main-langchain.py  main.py  main1.py  pyproject.toml  requirements.txt
api/v1/: chain.py
conversational_api/: chain.py  main.py
conversational_api/api/v1/: chain.py
fast-api/: chainAzure.py
templates/: answer.txt  answer11.txt  answer2.txt
