[tool.poetry]
name = "conversational-api"
version = "0.1.0"
description = ""
authors = ["Humphrey Muhiu <humphrey.asante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["all"], version = "^0.0.41"}
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
langchain = "^0.1.7"
tiktoken = "^0.6.0"
opensearch-py = "^2.4.2"
pydantic = "^2.6.1"
openai = "^1.12.0"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
